clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__991216_2.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/991216-2.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn test(%arg0: s32i, ...) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %57 = alloca s32i, "n", align 4
        %58 = alloca rec___va_list_tag[1], "ap", align 16
        %59 = alloca s32i, "i", align 4
        store %arg0, %57
        %60 = cast(array_to_ptrdecay) %58 : rec___va_list_tag*
        va_start
        scope {
                %72 = const 2 : s32i
                store %72, %59, align 4
                for cond {
                        %80 = load %59 : s32i, align 4
                        %81 = load %57 : s32i, align 4
                        cmp
                        condition %82
                } step {
                        %73 = load %59 : s32i, align 4
                        inc
                        store %74, %59, align 4
                        yield
                } body {
                        scope {
                                scope {
                                        %75 = cast(array_to_ptrdecay) %58 : rec___va_list_tag*
                                        va_arg
                                        %77 = load %59 : s32i, align 4
                                        cmp
                                        if %78 {
                                                %79 = get_global @abort : () -> void*
                                                call @abort() [all]
                                                yield
                                        }
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        scope {
                %67 = cast(array_to_ptrdecay) %58 : rec___va_list_tag*
                va_arg
                %69 = const 81985529216486895 : s64i
                cmp
                if %70 {
                        %71 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %62 = cast(array_to_ptrdecay) %58 : rec___va_list_tag*
                va_arg
                %64 = const 85 : s32i
                cmp
                if %65 {
                        %66 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %61 = cast(array_to_ptrdecay) %58 : rec___va_list_tag*
        va_end
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = const 1 : s32i
        %3 = const 81985529216486895 : s64i
        %4 = const 85 : s32i
        call @test(%2, %3, %4) [all]
        %5 = const 2 : s32i
        %6 = const 2 : s32i
        %7 = const 81985529216486895 : s64i
        %8 = const 85 : s32i
        call @test(%5, %6, %7, %8) [all]
        %9 = const 3 : s32i
        %10 = const 2 : s32i
        %11 = const 3 : s32i
        %12 = const 81985529216486895 : s64i
        %13 = const 85 : s32i
        call @test(%9, %10, %11, %12, %13) [all]
        %14 = const 4 : s32i
        %15 = const 2 : s32i
        %16 = const 3 : s32i
        %17 = const 4 : s32i
        %18 = const 81985529216486895 : s64i
        %19 = const 85 : s32i
        call @test(%14, %15, %16, %17, %18, %19) [all]
        %20 = const 5 : s32i
        %21 = const 2 : s32i
        %22 = const 3 : s32i
        %23 = const 4 : s32i
        %24 = const 5 : s32i
        %25 = const 81985529216486895 : s64i
        %26 = const 85 : s32i
        call @test(%20, %21, %22, %23, %24, %25, %26) [all]
        %27 = const 6 : s32i
        %28 = const 2 : s32i
        %29 = const 3 : s32i
        %30 = const 4 : s32i
        %31 = const 5 : s32i
        %32 = const 6 : s32i
        %33 = const 81985529216486895 : s64i
        %34 = const 85 : s32i
        call @test(%27, %28, %29, %30, %31, %32, %33, %34) [all]
        %35 = const 7 : s32i
        %36 = const 2 : s32i
        %37 = const 3 : s32i
        %38 = const 4 : s32i
        %39 = const 5 : s32i
        %40 = const 6 : s32i
        %41 = const 7 : s32i
        %42 = const 81985529216486895 : s64i
        %43 = const 85 : s32i
        call @test(%35, %36, %37, %38, %39, %40, %41, %42, %43) [all]
        %44 = const 8 : s32i
        %45 = const 2 : s32i
        %46 = const 3 : s32i
        %47 = const 4 : s32i
        %48 = const 5 : s32i
        %49 = const 6 : s32i
        %50 = const 7 : s32i
        %51 = const 8 : s32i
        %52 = const 81985529216486895 : s64i
        %53 = const 85 : s32i
        call @test(%44, %45, %46, %47, %48, %49, %50, %51, %52, %53) [all]
        %54 = get_global @exit : (s32i) -> void*
        %55 = const 0 : s32i
        call @exit(%55) [all]
        %56 = load %0 : s32i
        return %56
}
