clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__991227_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/991227-1.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[8] = ConstArray { ty: Array { element_type: Named("s8i"), size: 8 }, elts: Str("\0wrong\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[8] = ConstArray { ty: Array { element_type: Named("s8i"), size: 8 }, elts: Str("\0right\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn doit(%arg0: s32i) -> s8i* [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %23 = alloca s32i, "flag", align 4
        %24 = alloca s8i*, "__retval", align 8
        store %arg0, %23
        %25 = const 1 : s32i
        %26 = load %23 : s32i, align 4
        %27 = cast(int_to_bool) %26 : bool
        %28 = get_global @.str : s8i[8]*
        %29 = cast(array_to_ptrdecay) %28 : s8i*
        %30 = get_global @.str.1 : s8i[8]*
        %31 = cast(array_to_ptrdecay) %30 : s8i*
        select
        ptr_stride
        store %33, %24
        %34 = load %24 : s8i*
        return %34
}
fn exit(%arg0: s32i) -> void [external, c];
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s8i*, "result", align 8
        %2 = const 0 : s32i
        store %2, %0
        %3 = const 0 : s32i
        %4 = call @doit(%3) : s8i* [all]
        store %4, %1, align 8
        scope {
                %7 = load %1 : s8i*, align 8
                %8 = load %7 : s8i, align 1
                %9 = cast(integral) %8 : s32i
                %10 = const 114 : s32i
                cmp
                %12 = ternary %11 ? { : bool
                        %16 = const 1 : s64i
                        %17 = load %1 : s8i*, align 8
                        ptr_stride
                        %19 = load %18 : s8i, align 1
                        %20 = cast(integral) %19 : s32i
                        %21 = const 105 : s32i
                        cmp
                        yield %22
                } : {
                        %15 = const false : bool
                        yield %15
                }
                if %12 {
                        %13 = get_global @exit : (s32i) -> void*
                        %14 = const 0 : s32i
                        call @exit(%14) [all]
                        yield
                }
                yield
        }
        %5 = get_global @abort : () -> void*
        call @abort() [all]
        %6 = load %0 : s32i
        return %6
}
