clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__align_2.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/align-2.c" (c, x86_64-unknown-linux-gnu)
global s_c_s : rec_a_short = ConstRecord { ty: Named("rec_a_short"), members: Array([CirInt { ty: Named("s8i"), value: "97" }, CirInt { ty: Named("s16i"), value: "13" }]) } [external, default, align 2, dso_local]
global s_c_i : rec_a_int = ConstRecord { ty: Named("rec_a_int"), members: Array([CirInt { ty: Named("s8i"), value: "98" }, CirInt { ty: Named("s32i"), value: "14" }]) } [external, default, align 4, dso_local]
global s_s_i : rec_b_int = ConstRecord { ty: Named("rec_b_int"), members: Array([CirInt { ty: Named("s16i"), value: "15" }, CirInt { ty: Named("s32i"), value: "16" }]) } [external, default, align 4, dso_local]
global s_c_f : rec_a_float = ConstRecord { ty: Named("rec_a_float"), members: Array([CirInt { ty: Named("s8i"), value: "99" }, CirFloat { ty: Single, value: "1.700000e+01" }]) } [external, default, align 4, dso_local]
global s_s_f : rec_b_float = ConstRecord { ty: Named("rec_b_float"), members: Array([CirInt { ty: Named("s16i"), value: "18" }, CirFloat { ty: Single, value: "1.900000e+01" }]) } [external, default, align 4, dso_local]
global s_c_d : rec_a_double = ConstRecord { ty: Named("rec_a_double"), members: Array([CirInt { ty: Named("s8i"), value: "100" }, CirFloat { ty: Double, value: "2.000000e+01" }]) } [external, default, align 8, dso_local]
global s_s_d : rec_b_double = ConstRecord { ty: Named("rec_b_double"), members: Array([CirInt { ty: Named("s16i"), value: "21" }, CirFloat { ty: Double, value: "2.200000e+01" }]) } [external, default, align 8, dso_local]
global s_i_d : rec_c_double = ConstRecord { ty: Named("rec_c_double"), members: Array([CirInt { ty: Named("s32i"), value: "23" }, CirFloat { ty: Double, value: "2.400000e+01" }]) } [external, default, align 8, dso_local]
global s_f_d : rec_d_double = ConstRecord { ty: Named("rec_d_double"), members: Array([CirFloat { ty: Single, value: "2.500000e+01" }, CirFloat { ty: Double, value: "2.600000e+01" }]) } [external, default, align 8, dso_local]
global s_c_ld : rec_a_ldouble = ConstRecord { ty: Named("rec_a_ldouble"), members: Array([CirInt { ty: Named("s8i"), value: "101" }, CirFloat { ty: LongDouble { underlying: Fp80 }, value: "2.700000e+01" }]) } [external, default, align 16, dso_local]
global s_s_ld : rec_b_ldouble = ConstRecord { ty: Named("rec_b_ldouble"), members: Array([CirInt { ty: Named("s16i"), value: "28" }, CirFloat { ty: LongDouble { underlying: Fp80 }, value: "2.900000e+01" }]) } [external, default, align 16, dso_local]
global s_i_ld : rec_c_ldouble = ConstRecord { ty: Named("rec_c_ldouble"), members: Array([CirInt { ty: Named("s32i"), value: "30" }, CirFloat { ty: LongDouble { underlying: Fp80 }, value: "3.100000e+01" }]) } [external, default, align 16, dso_local]
global s_f_ld : rec_d_ldouble = ConstRecord { ty: Named("rec_d_ldouble"), members: Array([CirFloat { ty: Single, value: "3.200000e+01" }, CirFloat { ty: LongDouble { underlying: Fp80 }, value: "3.300000e+01" }]) } [external, default, align 16, dso_local]
global s_d_ld : rec_e_ldouble = ConstRecord { ty: Named("rec_e_ldouble"), members: Array([CirFloat { ty: Double, value: "3.400000e+01" }, CirFloat { ty: LongDouble { underlying: Fp80 }, value: "3.500000e+01" }]) } [external, default, align 16, dso_local]

fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %184 = get_global @s_c_s : rec_a_short*
                get_member
                %186 = load %185 : s8i, align 2
                %187 = cast(integral) %186 : s32i
                %188 = const 97 : s32i
                cmp
                if %189 {
                        %190 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %177 = get_global @s_c_s : rec_a_short*
                get_member
                %179 = load %178 : s16i, align 2
                %180 = cast(integral) %179 : s32i
                %181 = const 13 : s32i
                cmp
                if %182 {
                        %183 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %170 = get_global @s_c_i : rec_a_int*
                get_member
                %172 = load %171 : s8i, align 4
                %173 = cast(integral) %172 : s32i
                %174 = const 98 : s32i
                cmp
                if %175 {
                        %176 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %164 = get_global @s_c_i : rec_a_int*
                get_member
                %166 = load %165 : s32i, align 4
                %167 = const 14 : s32i
                cmp
                if %168 {
                        %169 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %157 = get_global @s_s_i : rec_b_int*
                get_member
                %159 = load %158 : s16i, align 4
                %160 = cast(integral) %159 : s32i
                %161 = const 15 : s32i
                cmp
                if %162 {
                        %163 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %151 = get_global @s_s_i : rec_b_int*
                get_member
                %153 = load %152 : s32i, align 4
                %154 = const 16 : s32i
                cmp
                if %155 {
                        %156 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %144 = get_global @s_c_f : rec_a_float*
                get_member
                %146 = load %145 : s8i, align 4
                %147 = cast(integral) %146 : s32i
                %148 = const 99 : s32i
                cmp
                if %149 {
                        %150 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %137 = get_global @s_c_f : rec_a_float*
                get_member
                %139 = load %138 : float, align 4
                %140 = cast(floating) %139 : double
                %141 = const 1.700000e+01 : double
                cmp
                if %142 {
                        %143 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %130 = get_global @s_s_f : rec_b_float*
                get_member
                %132 = load %131 : s16i, align 4
                %133 = cast(integral) %132 : s32i
                %134 = const 18 : s32i
                cmp
                if %135 {
                        %136 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %123 = get_global @s_s_f : rec_b_float*
                get_member
                %125 = load %124 : float, align 4
                %126 = cast(floating) %125 : double
                %127 = const 1.900000e+01 : double
                cmp
                if %128 {
                        %129 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %116 = get_global @s_c_d : rec_a_double*
                get_member
                %118 = load %117 : s8i, align 8
                %119 = cast(integral) %118 : s32i
                %120 = const 100 : s32i
                cmp
                if %121 {
                        %122 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %110 = get_global @s_c_d : rec_a_double*
                get_member
                %112 = load %111 : double, align 8
                %113 = const 2.000000e+01 : double
                cmp
                if %114 {
                        %115 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %103 = get_global @s_s_d : rec_b_double*
                get_member
                %105 = load %104 : s16i, align 8
                %106 = cast(integral) %105 : s32i
                %107 = const 21 : s32i
                cmp
                if %108 {
                        %109 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %97 = get_global @s_s_d : rec_b_double*
                get_member
                %99 = load %98 : double, align 8
                %100 = const 2.200000e+01 : double
                cmp
                if %101 {
                        %102 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %91 = get_global @s_i_d : rec_c_double*
                get_member
                %93 = load %92 : s32i, align 8
                %94 = const 23 : s32i
                cmp
                if %95 {
                        %96 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %85 = get_global @s_i_d : rec_c_double*
                get_member
                %87 = load %86 : double, align 8
                %88 = const 2.400000e+01 : double
                cmp
                if %89 {
                        %90 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %78 = get_global @s_f_d : rec_d_double*
                get_member
                %80 = load %79 : float, align 8
                %81 = cast(floating) %80 : double
                %82 = const 2.500000e+01 : double
                cmp
                if %83 {
                        %84 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %72 = get_global @s_f_d : rec_d_double*
                get_member
                %74 = load %73 : double, align 8
                %75 = const 2.600000e+01 : double
                cmp
                if %76 {
                        %77 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %65 = get_global @s_c_ld : rec_a_ldouble*
                get_member
                %67 = load %66 : s8i, align 16
                %68 = cast(integral) %67 : s32i
                %69 = const 101 : s32i
                cmp
                if %70 {
                        %71 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %58 = get_global @s_c_ld : rec_a_ldouble*
                get_member
                %60 = load %59 : long_double<f80>, align 16
                %61 = const 2.700000e+01 : double
                %62 = cast(floating) %61 : long_double<f80>
                cmp
                if %63 {
                        %64 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %51 = get_global @s_s_ld : rec_b_ldouble*
                get_member
                %53 = load %52 : s16i, align 16
                %54 = cast(integral) %53 : s32i
                %55 = const 28 : s32i
                cmp
                if %56 {
                        %57 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %44 = get_global @s_s_ld : rec_b_ldouble*
                get_member
                %46 = load %45 : long_double<f80>, align 16
                %47 = const 2.900000e+01 : double
                %48 = cast(floating) %47 : long_double<f80>
                cmp
                if %49 {
                        %50 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %38 = get_global @s_i_ld : rec_c_ldouble*
                get_member
                %40 = load %39 : s32i, align 16
                %41 = const 30 : s32i
                cmp
                if %42 {
                        %43 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %31 = get_global @s_i_ld : rec_c_ldouble*
                get_member
                %33 = load %32 : long_double<f80>, align 16
                %34 = const 3.100000e+01 : double
                %35 = cast(floating) %34 : long_double<f80>
                cmp
                if %36 {
                        %37 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %24 = get_global @s_f_ld : rec_d_ldouble*
                get_member
                %26 = load %25 : float, align 16
                %27 = cast(floating) %26 : double
                %28 = const 3.200000e+01 : double
                cmp
                if %29 {
                        %30 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %17 = get_global @s_f_ld : rec_d_ldouble*
                get_member
                %19 = load %18 : long_double<f80>, align 16
                %20 = const 3.300000e+01 : double
                %21 = cast(floating) %20 : long_double<f80>
                cmp
                if %22 {
                        %23 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %11 = get_global @s_d_ld : rec_e_ldouble*
                get_member
                %13 = load %12 : double, align 16
                %14 = const 3.400000e+01 : double
                cmp
                if %15 {
                        %16 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %4 = get_global @s_d_ld : rec_e_ldouble*
                get_member
                %6 = load %5 : long_double<f80>, align 16
                %7 = const 3.500000e+01 : double
                %8 = cast(floating) %7 : long_double<f80>
                cmp
                if %9 {
                        %10 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %2 = const 0 : s32i
        store %2, %0
        %3 = load %0 : s32i
        return %3
}
