clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__align_3.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/align-3.c" (c, x86_64-unknown-linux-gnu)
fn func() -> void [external, c, no_inline, dso_local, nothrow] {
        return
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %4 = const 256 : u64i
                %5 = const 256 : u64i
                cmp
                if %6 {
                        %7 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %2 = const 0 : s32i
        store %2, %0
        %3 = load %0 : s32i
        return %3
}
